--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="7.5dp"
-            android:layout_marginEnd="2.5dp"
+            android:layout_marginRight="2.5dp"
             android:layout_marginBottom="7.5dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="2.5dp"
+            android:layout_marginLeft="2.5dp"
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:hyphenationFrequency="none"
