--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="@string/about_title"
-            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
             android:id="@+id/about_content"
@@ -39,7 +39,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
-            android:gravity="center"></TextView>
+            android:gravity="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,7 +49,7 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="0.3"></View>
+                android:layout_weight="0.3" />
 
             <Button
                 android:id="@+id/about_back_button"
@@ -61,7 +61,7 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="0.3"></View>
+                android:layout_weight="0.3" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
