--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:fitsSystemWindows="true"
-    tools:context="com.app.memoeslink.adivinador.AboutActivity">
+    tools:context="com.app.memoeslink.adivinador.activity.AboutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
