--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -31,7 +31,7 @@
             android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="@string/input_title"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="@android:style/TextAppearance.Large" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -70,7 +70,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="@string/input_gender_description"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="#FFFBCC" />
 
         <RadioGroup
@@ -110,7 +110,7 @@
             android:gravity="center"
             android:singleLine="true"
             android:text="@string/input_birthdate"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="#FFFBCC" />
 
         <com.app.memoeslink.adivinador.CustomDatePicker
