--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:gravity="center"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        android:textAppearance="@android:style/TextAppearance.Medium" />
 
                     <RelativeLayout
                         android:id="@+id/main_header"
@@ -95,6 +95,7 @@
                             android:layout_marginRight="5dp"
                             android:layout_marginBottom="10dp"
                             android:animateLayoutChanges="true"
+                            android:baselineAligned="false"
                             android:divider="@drawable/divider"
                             android:orientation="horizontal"
                             android:showDividers="middle">
@@ -117,7 +118,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                                    android:textAppearance="@android:style/TextAppearance.Small" />
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -145,7 +146,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                                    android:textAppearance="@android:style/TextAppearance.Small" />
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -173,7 +174,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                                    android:textAppearance="@android:style/TextAppearance.Small" />
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -201,7 +202,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                                    android:textAppearance="@android:style/TextAppearance.Small" />
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -230,7 +231,7 @@
                                     android:gravity="center"
                                     android:maxLines="2"
                                     android:singleLine="true"
-                                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                                    android:textAppearance="@android:style/TextAppearance.Small" />
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -262,7 +263,7 @@
                         android:enabled="false"
                         android:gravity="center"
                         android:singleLine="true"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                        android:textAppearance="@android:style/TextAppearance.Small" />
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:id="@+id/main_date_selector"
@@ -281,13 +282,13 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
-                        android:drawableLeft="@drawable/emptiness"
-                        android:drawableRight="@drawable/calendar"
                         android:drawablePadding="5dp"
                         android:ellipsize="middle"
                         android:singleLine="true"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:visibility="gone" />
+                        android:textAppearance="@android:style/TextAppearance.Small"
+                        android:visibility="gone"
+                        app:drawableLeftCompat="@drawable/emptiness"
+                        app:drawableRightCompat="@drawable/calendar" />
 
                     <View
                         android:layout_width="match_parent"
@@ -304,7 +305,7 @@
                         android:focusable="true"
                         android:gravity="center"
                         android:longClickable="true"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textAppearance="@android:style/TextAppearance.Medium"
                         android:textIsSelectable="true" />
 
                     <LinearLayout
