--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:name="com.app.memoeslink.adivinador.activity.SettingsActivity$CustomPreferenceFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
