--- a/app/src/main/res/layout/dialog_compatibility.xml
+++ b/app/src/main/res/layout/dialog_compatibility.xml
@@ -54,12 +54,12 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:clickable="true"
-            android:drawableLeft="@drawable/emptiness"
-            android:drawableRight="@drawable/group_link"
             android:drawablePadding="5dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="@android:style/TextAppearance.Small"
+            app:drawableLeftCompat="@drawable/emptiness"
+            app:drawableRightCompat="@drawable/group_link" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -103,7 +103,7 @@
             android:layout_marginBottom="5dp"
             android:ellipsize="middle"
             android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="@android:style/TextAppearance.Medium" />
 
         <View
             android:layout_width="match_parent"
