--- a/app/src/main/res/xml/default_preferences.xml
+++ b/app/src/main/res/xml/default_preferences.xml
@@ -3,23 +3,23 @@
     <PreferenceCategory android:title="@string/preference_fortune_teller">
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_greetingsEnabled"
+            android:key="setting_greetingsEnabled"
             android:summary="@string/preference_greetings_summary"
             android:title="@string/preference_greetings" />
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_opinionsEnabled"
+            android:key="setting_opinionsEnabled"
             android:summary="@string/preference_opinions_summary"
             android:title="@string/preference_opinions" />
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_phrasesEnabled"
+            android:key="setting_phrasesEnabled"
             android:summary="@string/preference_phrases_summary"
             android:title="@string/preference_phrases" />
         <EditTextPreference
             android:defaultValue="@string/emptiness"
             android:dialogTitle="@string/preference_seed_title"
-            android:key="preference_seed"
+            android:key="setting_seed"
             android:maxLength="32"
             android:maxLines="1"
             android:persistent="true"
@@ -29,21 +29,21 @@
             android:defaultValue="60"
             android:entries="@array/update_time"
             android:entryValues="@array/update_time_values"
-            android:key="preference_updateTime"
+            android:key="setting_updateTime"
             android:summary="@string/preference_update_frequency_summary"
             android:title="@string/preference_update_frequency" />
         <ListPreference
             android:defaultValue="1"
             android:entries="@array/fortune_teller_aspect"
             android:entryValues="@array/fortune_teller_aspects"
-            android:key="preference_fortuneTellerAspect"
+            android:key="setting_fortuneTellerAspect"
             android:summary="@string/preference_fortune_teller_aspect_summary"
             android:title="@string/preference_fortune_teller_aspect" />
         <ListPreference
             android:defaultValue="20"
             android:entries="@array/refresh_time"
             android:entryValues="@array/refresh_time_values"
-            android:key="preference_refreshTime"
+            android:key="setting_refreshTime"
             android:summary="@string/preference_refresh_frequency_summary"
             android:title="@string/preference_refresh_frequency" />
     </PreferenceCategory>
@@ -51,19 +51,19 @@
     <PreferenceCategory android:title="@string/preference_audio">
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="preference_audioEnabled"
+            android:key="setting_audioEnabled"
             android:summary="@string/preference_enable_audio_summary"
             android:title="@string/preference_enable_audio" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:dependency="preference_audioEnabled"
-            android:key="preference_soundsEnabled"
+            android:key="setting_soundsEnabled"
             android:summary="@string/preference_enable_sounds_summary"
             android:title="@string/preference_enable_sounds" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:dependency="preference_audioEnabled"
-            android:key="preference_voiceEnabled"
+            android:key="setting_voiceEnabled"
             android:summary="@string/preference_enable_voice_summary"
             android:title="@string/preference_enable_voice" />
     </PreferenceCategory>
@@ -75,7 +75,7 @@
             android:defaultValue="0"
             android:entries="@array/text_type"
             android:entryValues="@array/text_type_values"
-            android:key="preference_textType"
+            android:key="setting_textType"
             android:summary="@string/preference_text_reading_summary"
             android:title="@string/preference_text_reading" />
     </PreferenceCategory>
@@ -83,22 +83,22 @@
     <PreferenceCategory android:title="@string/preference_interface">
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_hideDrawer"
+            android:key="setting_hideDrawer"
             android:summary="@string/preference_hide_drawer_summary"
             android:title="@string/preference_hide_drawer" />
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="preference_stickHeader"
+            android:key="setting_stickHeader"
             android:summary="@string/preference_stick_header_summary"
             android:title="@string/preference_stick_header" />
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_particlesEnabled"
+            android:key="setting_particlesEnabled"
             android:summary="@string/preference_enable_particles_summary"
             android:title="@string/preference_enable_particles" />
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_adsEnabled"
+            android:key="setting_adsEnabled"
             android:summaryOff="@string/preference_enable_ads_summary_off"
             android:summaryOn="@string/preference_enable_ads_summary_on"
             android:title="@string/preference_enable_ads" />
@@ -106,14 +106,14 @@
             android:defaultValue="@string/default_language"
             android:entries="@array/language"
             android:entryValues="@array/languages"
-            android:key="preference_language"
+            android:key="setting_language"
             android:summary="@string/preference_language_summary"
             android:title="@string/preference_language" />
         <ListPreference
             android:defaultValue="0"
             android:entries="@array/theme"
             android:entryValues="@array/theme_values"
-            android:key="preference_theme"
+            android:key="setting_theme"
             android:summary="@string/preference_theme_summary"
             android:title="@string/preference_theme" />
     </PreferenceCategory>
@@ -121,7 +121,7 @@
     <PreferenceCategory android:title="@string/preference_screen">
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="preference_activeScreen"
+            android:key="setting_activeScreen"
             android:summary="@string/preference_active_screen_summary"
             android:title="@string/preference_active_screen" />
     </PreferenceCategory>
@@ -129,17 +129,17 @@
     <PreferenceCategory android:title="@string/preference_registry">
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_keepForm"
+            android:key="setting_keepForm"
             android:summary="@string/preference_keep_form_summary"
             android:title="@string/preference_keep_form" />
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_saveNames"
+            android:key="setting_saveNames"
             android:summary="@string/preference_save_names_summary"
             android:title="@string/preference_save_names" />
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_saveEnquiries"
+            android:key="setting_saveEnquiries"
             android:summary="@string/preference_save_enquiries_summary"
             android:title="@string/preference_save_enquiries" />
     </PreferenceCategory>
