--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:gravity="center"
+                        android:minLines="3"
                         android:textAppearance="@android:style/TextAppearance.Medium" />
 
                     <RelativeLayout
