--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
-                        android:gravity="center"
+                        android:gravity="center|top"
                         android:minLines="3"
                         android:textAppearance="@android:style/TextAppearance.Medium" />
 
