--- a/app/src/main/res/layout/dialog_name_generation.xml
+++ b/app/src/main/res/layout/dialog_name_generation.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -62,7 +62,8 @@
                 android:longClickable="false"
                 android:maxLines="2"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textIsSelectable="true" />
+                android:textIsSelectable="true"
+                android:importantForAutofill="no" />
 
             <View
                 android:layout_width="0dp"
