Refactored code, which includes: * Splitting the information shown in the prediction, displaying only the fortune-telling part. The personal information is pending for implementation in Identity.java. * Added sign getters in ZodiacSign.java and WalterBergZodiacSign.java. * PreferenceHandler.java relying more on SharedPreferencesHelper.java. * Adding PreferenceUtils.java to manage all the preferences in the app. * Replaced StickyScrollView.java. * Removed Device.java from the android-generator dependency and moving it to a brand new one. Replaced old .PNG icons. Removed old .XML files.

--- a/app/src/main/res/layout/dialog_compatibility.xml
+++ b/app/src/main/res/layout/dialog_compatibility.xml
@@ -59,7 +59,7 @@
             android:singleLine="true"
             android:textAppearance="@android:style/TextAppearance.Small"
             app:drawableLeftCompat="@drawable/emptiness"
-            app:drawableRightCompat="@drawable/group_link" />
+            app:drawableRightCompat="@drawable/couple" />
 
         <LinearLayout
             android:layout_width="match_parent"
