--- a/app/src/main/res/layout/dialog_name_generation.xml
+++ b/app/src/main/res/layout/dialog_name_generation.xml
@@ -85,6 +85,6 @@
             android:singleLine="true"
             android:textAppearance="@android:style/TextAppearance.Small"
             app:drawableLeftCompat="@drawable/emptiness"
-            app:drawableRightCompat="@drawable/page" />
+            app:drawableRightCompat="@drawable/copy" />
     </LinearLayout>
 </ScrollView>
