--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,7 +5,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_data_entry"
-            android:icon="@drawable/application_link"
+            android:icon="@drawable/enquiry"
             android:title="@string/data_entry"></item>
         <item
             android:id="@+id/nav_reload"
@@ -17,7 +17,7 @@
             android:title="@string/save"></item>
         <item
             android:id="@+id/nav_inquiry"
-            android:icon="@drawable/enquiry"
+            android:icon="@drawable/form"
             android:title="…"></item>
         <item
             android:id="@+id/nav_selector"
