--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -413,14 +413,13 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
-                android:id="@+id/ad_progress"
-                style="@style/Widget.MaterialProgressBar.ProgressBar.Small"
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                style="@style/Widget.Material3.CircularProgressIndicator.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:indeterminate="true"
-                app:mpb_progressStyle="circular" />
+                app:indicatorColor="?accent" />
 
             <LinearLayout
                 android:id="@+id/ad_content"
