--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -113,15 +113,29 @@
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="#FFFBCC" />
 
-        <com.app.memoeslink.adivinador.CustomDatePicker
-            android:id="@+id/input_date_picker"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner" />
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="0.15" />
+
+            <com.app.memoeslink.adivinador.CustomDatePicker
+                android:id="@+id/input_date_picker"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="0.15" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
