--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,9 @@
         <item name="disabledItem">@color/gray</item>
         <item name="android:actionBarStyle">@style/Theme.AppCompat.CompactMenu</item>
         <item name="colorAccent">?attr/accent</item>
+        <item name="android:colorAccent">?attr/accent</item>
         <item name="android:listDivider">?attr/accent</item>
+        <item name="android:headerBackground">?attr/accent</item>
         <item name="android:textColor">@color/selector</item>
     </style>
 
@@ -26,8 +28,6 @@
         <item name="android:colorBackground">@android:color/black</item>
         <item name="colorPrimary">#E0000000</item>
         <item name="colorPrimaryDark">#E0000000</item>
-        <item name="colorAccent">?attr/accent</item>
-        <item name="android:listDivider">?attr/accent</item>
         <item name="android:windowContentOverlay">@drawable/overlay</item>
     </style>
 
@@ -38,8 +38,6 @@
         <item name="android:colorBackground">@color/gray</item>
         <item name="actionBarStyle">@style/GrayTheme.ActionBar</item>
         <item name="android:actionBarStyle">@style/GrayTheme.ActionBar</item>
-        <item name="colorAccent">?attr/accent</item>
-        <item name="android:listDivider">?attr/accent</item>
         <item name="android:textColor">@color/selector</item>
         <item name="android:windowContentOverlay">@drawable/shadow</item>
     </style>
@@ -51,8 +49,6 @@
         <item name="android:colorBackground">@color/slate_gray</item>
         <item name="colorPrimary">@color/purple_gray</item>
         <item name="colorPrimaryDark">@color/dark_purple_gray</item>
-        <item name="colorAccent">?attr/accent</item>
-        <item name="android:listDivider">?attr/accent</item>
         <item name="android:textColor">@color/selector</item>
         <item name="android:shadowColor">#000000</item>
         <item name="android:shadowDx">1</item>
