--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
                         android:minLines="3"
                         android:textAppearance="@android:style/TextAppearance.Medium" />
 
-                    <LinearLayout
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="10dp"
@@ -257,7 +257,7 @@
                             </LinearLayout>
                         </LinearLayout>
 
-                        <LinearLayout
+                        <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:alpha="225"
@@ -337,7 +337,7 @@
                             app:drawableLeftCompat="@drawable/emptiness"
                             app:drawableRightCompat="@drawable/calendar" />
 
-                        <LinearLayout
+                        <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginTop="20dp"
