--- a/app/src/main/res/layout/activity_donations.xml
+++ b/app/src/main/res/layout/activity_donations.xml
@@ -31,7 +31,7 @@
             android:drawablePadding="5dp"
             android:gravity="center"
             android:text="@string/donations_title"
-            android:textAppearance="@android:style/TextAppearance.Large"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
             app:drawableLeftCompat="@drawable/money"
             app:drawableRightCompat="@drawable/money" />
 
@@ -44,7 +44,7 @@
             android:layout_marginRight="10dp"
             android:gravity="center"
             android:text="@string/donations_description"
-            android:textAppearance="@android:style/TextAppearance.Medium" />
+            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
         <LinearLayout
             android:layout_width="match_parent"
