--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
                         android:layout_marginRight="10dp"
                         android:gravity="center|top"
                         android:minLines="3"
-                        android:textAppearance="@android:style/TextAppearance.Medium" />
+                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
                     <View
                         android:layout_width="match_parent"
@@ -128,7 +128,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="@android:style/TextAppearance.Small" />
+                                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -159,7 +159,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="@android:style/TextAppearance.Small" />
+                                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -190,7 +190,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="@android:style/TextAppearance.Small" />
+                                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -221,7 +221,7 @@
                                     android:ellipsize="end"
                                     android:gravity="center"
                                     android:maxLines="2"
-                                    android:textAppearance="@android:style/TextAppearance.Small" />
+                                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -253,7 +253,7 @@
                                     android:gravity="center"
                                     android:maxLines="2"
                                     android:singleLine="true"
-                                    android:textAppearance="@android:style/TextAppearance.Small" />
+                                    android:textAppearance="@android:style/TextAppearance.Material.Small" />
                             </LinearLayout>
                         </LinearLayout>
 
@@ -320,7 +320,7 @@
                             android:enabled="false"
                             android:gravity="center"
                             android:singleLine="false"
-                            android:textAppearance="@android:style/TextAppearance.Small" />
+                            android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
                         <TextView
                             android:id="@+id/main_pick"
@@ -333,7 +333,7 @@
                             android:drawablePadding="5dp"
                             android:ellipsize="middle"
                             android:singleLine="true"
-                            android:textAppearance="@android:style/TextAppearance.Small"
+                            android:textAppearance="@android:style/TextAppearance.Material.Small"
                             app:drawableLeftCompat="@drawable/emptiness"
                             app:drawableRightCompat="@drawable/calendar" />
 
@@ -361,7 +361,7 @@
                         android:gravity="center"
                         android:longClickable="true"
                         android:text="@string/emptiness"
-                        android:textAppearance="@android:style/TextAppearance.Medium"
+                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                         android:textIsSelectable="true" />
 
                     <LinearLayout
