--- a/app/src/main/res/layout/dialog_compatibility.xml
+++ b/app/src/main/res/layout/dialog_compatibility.xml
@@ -57,7 +57,7 @@
             android:drawablePadding="5dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textAppearance="@android:style/TextAppearance.Small"
+            android:textAppearance="@android:style/TextAppearance.Material.Small"
             app:drawableLeftCompat="@drawable/emptiness"
             app:drawableRightCompat="@drawable/couple" />
 
@@ -103,7 +103,7 @@
             android:layout_marginBottom="5dp"
             android:ellipsize="middle"
             android:singleLine="true"
-            android:textAppearance="@android:style/TextAppearance.Medium" />
+            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
         <View
             android:layout_width="match_parent"
