--- a/app/src/main/res/layout/dialog_name_generation.xml
+++ b/app/src/main/res/layout/dialog_name_generation.xml
@@ -64,7 +64,7 @@
                 android:longClickable="false"
                 android:maxLines="2"
                 android:padding="10dp"
-                android:textAppearance="@android:style/TextAppearance.Medium"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:textIsSelectable="false" />
 
             <View
@@ -85,7 +85,7 @@
             android:drawablePadding="5dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textAppearance="@android:style/TextAppearance.Small"
+            android:textAppearance="@android:style/TextAppearance.Material.Small"
             app:drawableLeftCompat="@drawable/emptiness"
             app:drawableRightCompat="@drawable/copy" />
     </LinearLayout>
