--- a/app/src/main/res/layout/dialog_person_details.xml
+++ b/app/src/main/res/layout/dialog_person_details.xml
@@ -38,6 +38,6 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:gravity="center"
-            android:textAppearance="@android:style/TextAppearance.Medium" />
+            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
     </LinearLayout>
 </ScrollView>
